# autogen

./: agentcodeexecutor.py  agentwithmemory.py  autoterminate.py  builtintool.py  dsasolution.py  dsasolutionfinal.py  dsasolver.py  externaltool.py  firstautogenagent.ipynb  handoff.py  humaninloop.py  multipletoolcall.py  pyproject.toml  structuredoutput.py  userfeedback.py  userfunctiontool.py  usertool.py  usertool1.py
temp/: tmp_code_05d612421bcd510175359e4a8166c8c46fb5afce52ee7b606cf703e16eee4db7.python  tmp_code_2935a711e22bda1c224972a191dff0fa87e79e50af7ae9636a2ca179b96a4229.python
